--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -45,10 +45,28 @@
 		</dependency>
 		<dependency>
 			<groupId>telran.spring</groupId>
-			<artifactId>jwt-authentication</artifactId>
+			<artifactId>jwt-authentification</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>telran.spring</groupId>
+			<artifactId>web-exceptions-handler</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>telran.spring</groupId>
+			<artifactId>accounting-management</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
